[gd_scene load_steps=7 format=1]

[ext_resource path="res://main_menu.gd" type="Script" id=1]
[ext_resource path="res://tiles.tres" type="TileSet" id=2]
[ext_resource path="res://ball.tex" type="Texture" id=3]
[ext_resource path="res://ComputerSpeak.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

font/size = 19
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]

font/size = 40
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[node name="main_menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="TileMap" parent="."]

transform/pos = Vector2( -4, 0 )
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 7, 7, 7, 8, 7, 9, 7, 10, 7, 11, 7, 12, 7, 13, 536870912, 14, 536870912, 15, 536870912, 16, 536870912, 17, 536870912, 18, 536870912, 65536, 0, 65537, 0, 65538, 0, 65539, 0, 65540, 0, 65541, 0, 65542, 7, 65543, 7, 65544, 7, 65545, 7, 65546, 7, 65547, 7, 65548, 7, 65549, 536870912, 65550, 536870912, 65551, 536870912, 65552, 536870912, 65553, 536870912, 65554, 536870912, 131072, 0, 131073, 0, 131074, 0, 131075, 0, 131076, 0, 131077, 0, 131078, 7, 131079, 7, 131080, 7, 131081, 7, 131082, 7, 131083, 7, 131084, 7, 131085, 536870912, 131086, 536870912, 131087, 536870912, 131088, 536870912, 131089, 536870912, 131090, 536870912, 196608, 0, 196609, 0, 196610, 0, 196611, 0, 196612, 0, 196613, 2, 196614, 536870913, 196615, 536870913, 196616, 536870913, 196617, 536870913, 196618, 536870913, 196619, 536870913, 196620, 536870913, 196621, 536870914, 196622, 536870912, 196623, 536870912, 196624, 536870912, 196625, 536870912, 196626, 536870912, 262144, 0, 262145, 0, 262146, 0, 262147, 0, 262148, 2, 262149, 536870913, 262150, 536870913, 262151, 536870913, 262152, 536870913, 262153, 536870913, 262154, 536870913, 262155, 536870913, 262156, 536870913, 262157, 536870913, 262158, 536870914, 262159, 536870912, 262160, 536870912, 262161, 536870912, 262162, 536870912, 327680, 0, 327681, 0, 327682, 0, 327683, 2, 327684, 536870913, 327685, 536870913, 327686, 536870913, 327687, 536870913, 327688, 536870913, 327689, 536870913, 327690, 536870913, 327691, 536870913, 327692, 536870913, 327693, 536870913, 327694, 536870913, 327695, 536870914, 327696, 536870912, 327697, 536870912, 327698, 536870912, 393216, 0, 393217, 0, 393218, 2, 393219, 536870913, 393220, 536870913, 393221, 536870913, 393222, 536870913, 393223, 536870913, 393224, 536870913, 393225, 536870913, 393226, 536870913, 393227, 536870913, 393228, 536870913, 393229, 536870913, 393230, 536870913, 393231, 536870913, 393232, 536870914, 393233, 536870912, 393234, 536870912, 458752, 0, 458753, 2, 458754, 536870913, 458755, 536870913, 458756, 536870913, 458757, 536870913, 458758, 536870913, 458759, 536870913, 458760, 536870913, 458761, 536870913, 458762, 536870913, 458763, 536870913, 458764, 536870913, 458765, 536870913, 458766, 536870913, 458767, 536870913, 458768, 536870913, 458769, 536870914, 458770, 536870912, 524288, 2, 524289, 536870913, 524290, 536870913, 524291, 536870913, 524292, 536870913, 524293, 536870913, 524294, 536870913, 524295, 536870913, 524296, 536870913, 524297, 536870913, 524298, 536870913, 524299, 536870913, 524300, 536870913, 524301, 536870913, 524302, 536870913, 524303, 536870913, 524304, 536870913, 524305, 536870913, 524306, 536870914, 589824, 536870913, 589825, 536870913, 589826, 536870913, 589827, 536870913, 589828, 536870913, 589829, 536870913, 589830, 536870913, 589831, 536870913, 589832, 536870913, 589833, 536870913, 589834, 536870913, 589835, 536870913, 589836, 536870913, 589837, 536870913, 589838, 536870913, 589839, 536870913, 589840, 536870913, 589841, 536870913, 589842, 536870913, 655360, 536870913, 655361, 536870913, 655362, 536870913, 655363, 536870913, 655364, 536870913, 655365, 536870913, 655366, 536870913, 655367, 536870913, 655368, 536870913, 655369, 536870913, 655370, 536870913, 655371, 536870913, 655372, 536870913, 655373, 536870913, 655374, 536870913, 655375, 536870913, 655376, 536870913, 655377, 536870913, 655378, 536870913, 720896, 536870913, 720897, 536870913, 720898, 536870913, 720899, 536870913, 720900, 536870913, 720901, 536870913, 720902, 536870913, 720903, 536870913, 720904, 536870913, 720905, 536870913, 720906, 536870913, 720907, 536870913, 720908, 536870913, 720909, 536870913, 720910, 536870913, 720911, 536870913, 720912, 536870913, 720913, 536870913, 720914, 536870913, 786432, 536870913, 786433, 536870913, 786434, 536870913, 786435, 536870913, 786436, 536870913, 786437, 536870913, 786438, 536870913, 786439, 536870913, 786440, 536870913, 786441, 536870913, 786442, 536870913, 786443, 536870913, 786444, 536870913, 786445, 536870913, 786446, 536870913, 786447, 536870913, 786448, 536870913, 786449, 536870913, 786450, 536870913 )

[node name="particles" type="Particles2D" parent="."]

transform/pos = Vector2( 300, -20 )
transform/scale = Vector2( 0.5, 0.5 )
config/amount = 16
config/lifetime = 16.0
config/time_scale = 4.0
config/process_mode = 1
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 2.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.25
params/final_size = 2.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 1.0
randomness/spread = 50.0
randomness/linear_velocity = 1.0
randomness/spin_velocity = 1.0

[node name="1p_match" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 180.0
margin/right = 270.0
margin/bottom = 221.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "1p match"
flat = false

[node name="2p_match" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 180.0
margin/right = 480.0
margin/bottom = 221.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "2p match"
flat = false

[node name="tournament" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 260.0
margin/right = 240.0
margin/bottom = 301.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "tournament"
flat = false

[node name="settings" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 340.0
margin/right = 210.0
margin/bottom = 381.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "settings"
flat = false

[node name="quit" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 390.0
margin/top = 340.0
margin/right = 540.0
margin/bottom = 381.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "quit"
flat = false

[node name="help" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 360.0
margin/top = 260.0
margin/right = 510.0
margin/bottom = 301.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "help"
flat = false

[node name="title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 150.0
margin/top = 20.0
margin/right = 450.0
margin/bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "TENNIS 2017"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="todo" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 120.0
margin/right = 390.0
margin/bottom = 180.0
popup/exclusive = true
window/title = "TO DO"
dialog/text = "Not yet implemented"
dialog/hide_on_ok = true

[node name="instructions" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 140.0
margin/right = 572.0
margin/bottom = 385.0
popup/exclusive = false
window/title = "Instructions"
dialog/text = "You can use the walls, but you can only touch the ball once while it is in your side.

Left Player:
	A: left
	D: right
	W: jump

Right Player:
	Left: left
	Right: right
	Up: jump
"
dialog/hide_on_ok = true

[connection signal="pressed" from="1p_match" to="." method="_on_1p_match_pressed"]

[connection signal="pressed" from="2p_match" to="." method="_on_2p_match_pressed"]

[connection signal="pressed" from="tournament" to="." method="_on_tournament_pressed"]

[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]

[connection signal="pressed" from="help" to="." method="_on_help_pressed"]


